<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MPlayer Remote</string>
    <string name="activity_server_list_title">Choose a serwer to connect or add new server in menu.</string>
    <string name="wrong_app_password_exeption">Wrong password, try again.</string>

    <string name="tile_for_dialog_FIRST_TIME_RUNING">Servers data encryption</string>
    <string name="text_for_explanation_set_a_password_for_this_app_from_dialog_FIRST_TIME_RUNING">Set a password for this app:</string>
    <string name="text_for_use_encryption_checkBox_from_dialog_FIRST_TIME_RUNING">Use encyryption?</string>
    <string name="text_for_exit_dialog_first_time_runing_button">Next</string>

    <string name="title_for_dialog_GIVE_ME_A_APP_PASSWORD">Enter app password</string>
    <string name="text_for_remember_app_password_in_sesion_CheckBox_from_dialog_GIVE_ME_A_APP_PASSWORD">Remember app password in sesion</string>
    <string name="text_for_check_app_password_Button_from_dialog_GIVE_ME_A_APP_PASSWORD">Check app password</string>

    <string name="title_for_dialog_GIVE_ME_A_APP_PASSWORD_BECAUSE_REMEMBER_APP_PASSWORD_IN_SESION_BOOILEAN_IS_FALSE">Enter a app password</string>
    <string name="text_for_continue_with_given_app_password_Button">Check app password</string>

    <string name="title_for_dialog_GIVE_ME_A_SERVER_PASSWORD">Enter a server password</string>
    <string name="text_for_connect_to_server_Button_in_dialog_give_me_a_server_password">Connect to server</string>

    <string name="title_for_dialog_ADD_NEW_SERVER_CRYPTO_ENABLED">Add new server</string>
    <string name="text_for_server_nametextView_crypto_enable">Server name</string>
    <string name="text_for_ip_addresstextView_crypto_enabled">IP address or IP:port</string>
    <string name="text_for_usernametextView_crypto_enabled">Username</string>
    <string name="text_for_passwordtextView_crypto_enabled">Password</string>
    <string name="text_for_saveButton_crypto_enabled">Save</string>
    <string name="text_for_cancelButton_crypto_enabled">Cancel</string>
    <string name="text_for_toast_fill_up_the_empty_spaces">Fill up the empty spaces</string>
    <string name="text_for_toast_correct_IP_address">Correct IP address</string>
    <string name="text_for_toast_fields_should_not_contain_a_whitespace_character">Fields should not contain a whitespace character</string>

    <string name="title_for_dialog_CHOSE_SERVER_TO_EDIT">Choose a server to edit</string>

    <string name="title_for_dialog_EDIT_SERVER_CRYPTO_ENABLED">Edit server data</string>

    <string name="title_for_dialog_DELETE_SERVER">Choose a server to delete</string>
    <string name="title_for_dialog_DO_DELETE">Delete server </string>
    <string name="message_in_dialog_DO_DELATE">Delate server</string>
    <string name="text_for_do_delete_button">Delete</string>
    <string name="text_for_cancel_button">Cancel</string>

    <string name="title_for_menu_item_add_new_server">Add new server</string>
    <string name="title_form_menu_item_delete_server">Delete Server</string>
    <string name="title_for_menu_item_edit_server">Edit Server</string>
    <string name="title_for_menu_item_exit_from_app">Exit</string>
    <string name="title_for_menu_item_load_sublite">Load subtitles</string>
    <string name="title_for_menu_item_settings">Settings</string>
    <string name="title_for_menu_item_license">Licenses</string>


    <string name="text_for_use_encryption_in_SettingForServer_checkBox">Encrypt SSH servers data</string>
    <string name="text_for_show_only_media_type_files_checkBox">Show only know media file</string>
    <string name="text_for_toast_Edit_server_data_fill_server_password_field">Set app password and edit server data to fill server password field.</string>
    <string name="text_for_know_file_extensions">Know media file extension</string>
    <string name="text_for_ok_button">OK</string>
    <string name="text_for_title_of_dialog_choose_know_file_extensions">Choose extensions</string>

    <string name="text_for_progressdialog_from_connecttoserver">Conetting. Please wait...</string>
    <string name="text_for_toast_turn_wifi_or_3g_on_from_connecttoserver">Please turn on Wi-Fi or 3G or Wi-fi Tethering</string>
    <string name="text_for_toast_check_server_data_from_connecttoserver">Connection error, please check server data</string>

    <string name="text_for_DIALOG_PLAY_A_FILE_from_FileChooser">Play</string>
    <string name="text_for_positiveButton_from_DIALOG_PLAY_A_FILE">Yes</string>
    <string name="text_for_negativeButton_from_DIALOG_PLAY_A_FILE">No</string>
    <string name="text_for_toast_you_do_not_have_rights_to_open_this_directory">You do not have rights to open this directory</string>
    <string name="text_for_toast_nothing_to_play">Nothing to play</string>

    <string name="text_for_first_line_of_notification_from_serviceplayafile">Now playing:</string>

    <string name="text_for_toast_end_of_playlist">End of playlist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
