<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  android:layout_width="fill_parent"  android:layout_height="fill_parent">
	<LinearLayout android:layout_height="fill_parent" android:layout_width="250dp" android:orientation="vertical" android:id="@+id/linearLayout1">
	        <TextView 
	            android:text="@string/title_for_dialog_GIVE_ME_A_APP_PASSWORD" 
	            android:layout_width="wrap_content" 
	            android:id="@+id/enter_a_password_TextView" 
	            android:layout_height="wrap_content" 

	            android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_margin="10dp"
				android:textColor="#ff00ddff"/>

			<View
				android:id="@+id/line"
				android:layout_width="fill_parent"


				android:layout_height="2dp"
				android:background="#ff00ddff"/>
	           
	        <EditText 
	            android:id="@+id/app_password_EditText"
	            android:password= "true" 
	            android:layout_width="fill_parent"
				android:layout_margin="10dp"
	            android:text="" 
	            android:layout_height="wrap_content" 
	            />
	
	        <CheckBox
	            android:id="@+id/remember_app_password_in_sesion_CheckBox"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
				android:layout_margin="10dp"
	            android:checked="true"
				android:button="@null"
				android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
	            android:text="@string/text_for_remember_app_password_in_sesion_CheckBox_from_dialog_GIVE_ME_A_APP_PASSWORD"
				android:textAppearance="?android:attr/textAppearanceSmall"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:layout_marginLeft="4dip"
				android:layout_marginRight="4dip"
				android:background="?android:attr/dividerVertical"
				android:layout_alignParentTop="true"/>

	        <Button
	            android:id="@+id/check_app_password_Button"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
				android:text="@string/text_for_check_app_password_Button_from_dialog_GIVE_ME_A_APP_PASSWORD"
				style="?android:attr/borderlessButtonStyle"
				android:textAppearance="?android:attr/textAppearanceMedium"
				/>
	       
	</LinearLayout>
</ScrollView>