<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/MPlayer_RemoteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="MPlayer Remote"
            />

        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/MPlayer_RemoteTextView"
            android:layout_height="2dp"
            android:background="#FF4B4B4B"/>

        <CheckBox
            android:id="@+id/use_encryption_in_SettingForServer_checkBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/line1"
            android:text="@string/text_for_use_encryption_in_SettingForServer_checkBox"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false" />

        <View
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/use_encryption_in_SettingForServer_checkBox"
            android:layout_height="1dp"
            android:background="#FF4B4B4B"/>

        <CheckBox
            android:id="@+id/show_only_media_type_files_checkBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/line2"
            android:text="@string/text_for_show_only_media_type_files_checkBox"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:checked="true" />

        <View
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/show_only_media_type_files_checkBox"
            android:layout_height="1dp"
            android:background="#FF4B4B4B"/>

        <Button
            android:id="@+id/know_file_extensions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/line3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_for_know_file_extensions"
            style="?android:attr/borderlessButtonStyle"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/MPlayerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/know_file_extensions"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="MPlayer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <View
            android:id="@+id/line4"
            android:layout_width="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/MPlayerTextView"
            android:layout_height="2dp"
            android:background="#FF4B4B4B"/>




</RelativeLayout>
